RESOLVED FIXED141081
OSObjectPtr does not work with dispatch_data_t on Maverics
https://bugs.webkit.org/show_bug.cgi?id=141081
Summary OSObjectPtr does not work with dispatch_data_t on Maverics
Antti Koivisto
Reported 2015-01-30 05:48:04 PST
2015-01-30 15:43:57.680 com.apple.WebKit.Networking.Development[57008:1c07] -[OS_dispatch_data _xref_dispose]: unrecognized selector sent to instance 0x7f899fa021d0
Attachments
patch (3.07 KB, patch)
2015-01-30 06:04 PST, Antti Koivisto
psolanki: review+
use DispatchPtr instead (11.12 KB, patch)
2015-01-31 11:50 PST, Antti Koivisto
zalan: review+
Antti Koivisto
Comment 1 2015-01-30 06:04:56 PST
Antti Koivisto
Comment 2 2015-01-30 12:46:30 PST
WebKit Commit Bot
Comment 3 2015-01-31 09:39:36 PST
Re-opened since this is blocked by bug 141117
Antti Koivisto
Comment 4 2015-01-31 09:44:51 PST
Though this worked locally it doesn't seem to work on bots. This might be because the definition of dispatch_data_t varies based on context (objc or not etc) and so the template matching is not consistent.
Antti Koivisto
Comment 5 2015-01-31 11:50:58 PST
Created attachment 245790 [details] use DispatchPtr instead Enabling the cache so bots see the change. That will land separately.
Antti Koivisto
Comment 6 2015-01-31 12:43:55 PST
Note You need to log in before you can comment on or make changes to this bug.