OSObjectPtr does not work with dispatch_data_t on Maverics https://bugs.webkit.org/show_bug.cgi?id=141081

Reviewed by Pratik Solanki.
Source/WTF:


Trying to use OSObjectPtr<dispatch_data_t> throws

-[OS_dispatch_data _xref_dispose]: unrecognized selector sent to instance 0

* wtf/OSObjectPtr.h:
(WTF::retainOSObject<dispatch_data_t>):
(WTF::releaseOSObject<dispatch_data_t>):

    Add specialization for dispatch_data_t on Maverics.

Tools:


* TestWebKitAPI/Tests/WTF/darwin/OSObjectPtr.cpp:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/159086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179408 268f45cc-cd09-0410-ab3c-d52691b4dbfc